[package]
name        = "ithos"
description = "Modern directory services and credential management"
version     = "0.0.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "Apache-2.0"
homepage    = "https://github.com/cryptosphere/ithos"
repository  = "https://github.com/cryptosphere/ithos"
categories  = ["authentication", "database-implementations"]
keywords    = ["directory", "identity", "access", "secrets", "ldap"]
readme      = "README.md"
build       = "build.rs"

[dependencies]
byteorder       = "^0.5"
capnp           = "^0.8"
clap            = "^2.22"
error-chain     = "^0.10"
rustc-serialize = "^0.3"
ring            = "^0.7"
ring-pwhash     = "^0.1"
rpassword       = "^0.4"
time            = "^0.1"

[dependencies.lmdb]
version = "^0.6"
optional = true

[dependencies.lmdb-sys]
version = "^0.6"
optional = true

[dependencies.objecthash]
version = "^0.4"
features = ["octet-strings"]

[dev-dependencies]
tempdir = "^0.3"

[build-dependencies]
capnpc = "^0.8"
glob = "^0.2"

[features]
default = ["lmdb-adapter"]
lmdb-adapter = ["lmdb", "lmdb-sys"]
